Fixing vertical spacing tabs

--- a/src/components/issues-momentum.scss
+++ b/src/components/issues-momentum.scss
@@ -81,11 +81,6 @@
     .article-preview {
       min-width: 45%;
 
-      .article-card {
-        background: #ffffff;
-        color: $dark;
-        margin-top: 1.5rem;
-
         .article-header {
           background: $pink;
           display: flex;
@@ -98,9 +93,14 @@
         .article-body {
           padding: 1rem;
         }
-      }
     }
   }
+}
+
+.article-card {
+  background: #ffffff;
+  color: $dark;
+  margin-top: 1.5rem;
 }
 
 // Responsive Design for Tabs
@@ -123,7 +123,7 @@
   
 }
 
-@media screen and (max-width: 768px) { // Breakpoint: md
+@media screen and (max-width: 990px) { // Breakpoint: md
   .article-list {
     display: none;
   }
